# neon

./: .gitignore  .gitmodules  CMakeLists.txt  Make.hs  README.md  TODO.org  build.sh
emu/: .gdbinit  bochsrc.txt  run-bochs.sh  run-qemu.sh
grub/: CMakeLists.txt  grub.cfg.in
kernel/: CMakeLists.txt  assert.h
kernel/base/: hydrogen.c  hydrogen.h  isr.h  kernel.c  panic.c  panic.h  stddef.h  stdint.h  stdlib.c  stdlib.h  string.c  string.h  time.c  time.h
kernel/idris/: Foo.idr  Main.idr  Memory.idr
kernel/idrisrts/: idris_gc.c  idris_heap.c  idris_heap.h  idris_main.c  idris_opts.h  idris_rts.c  idris_rts.h  idris_stats.c  idris_stats.h  idris_stdfgn.c  idris_stdfgn.h
tools/: cross-toolchain.sh  make-image.sh  mount.sh
